--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
   "eslintConfig": {
     "extends": "@sapphire"
   },
+  "resolutions": {
+    "minimist": "^1.2.6"
+  },
   "dependencies": {
     "@discordjs/rest": "^0.4.1",
     "ora": "^6.1.0",
